<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.recorder.yma.audiorecorder.login.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/userEditText"
        android:layout_alignRight="@+id/userEditText"
        android:layout_alignEnd="@+id/userEditText"
        android:layout_marginTop="27dp"
        android:id="@+id/passwordEditText"
        android:hint="password" />

    <Button
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:enabled="false"
        android:id="@+id/loginButton"
        android:elevation="0dp"
        style="@android:style/Widget.Button.Inset" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="101dp"
        android:id="@+id/userEditText"
        android:hint="user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Start rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"
        android:layout_marginBottom="40dp"
        android:id="@+id/startRecButton" />

    <Button
        android:text="Stop rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/startRecButton"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText"
        android:id="@+id/stopButton" />

    <Button
        android:text="Start play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startPlayRecButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/startRecButton"
        android:layout_alignStart="@+id/startRecButton" />

    <Button
        android:text="Stop play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stopPlayButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/stopButton"
        android:layout_alignEnd="@+id/stopButton" />
</RelativeLayout>
