<resources>
    <string name="app_name">audioRecorder</string>
    <string name="title_activity_recordings">RecordingsActivity</string>
    <string name="title_activity_memo_details">MemoDetailsActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
